--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~52.0.42",
     "expo-constants": "^17.0.8",
     "expo-status-bar": "~2.0.1",
+    "formik": "^2.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.8",
