--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/native": "^7.1.6",
     "expo": "~52.0.42",
     "expo-constants": "^17.0.8",
+    "expo-image-picker": "~16.0.6",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~2.0.1",
     "formik": "^2.4.6",
     "react": "18.3.1",
