--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@expo/metro-runtime": "~4.0.1",
     "@react-native-community/hooks": "^100.1.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "@react-navigation/stack": "^7.2.10",
     "expo": "~52.0.42",
     "expo-constants": "^17.0.8",
     "expo-image-picker": "~16.0.6",
