--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
+    "apisauce": "^3.1.1",
     "expo": "~52.0.42",
     "expo-constants": "^17.0.8",
     "expo-image-picker": "~16.0.6",
