--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~2.0.1",
     "formik": "^2.4.6",
+    "lottie-react-native": "7.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.8",
