--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^7.2.10",
     "apisauce": "^3.1.1",
     "expo": "~52.0.42",
+    "expo-blur": "~14.0.3",
     "expo-constants": "^17.0.8",
     "expo-image-picker": "~16.0.6",
     "expo-location": "~18.0.10",
@@ -32,11 +33,13 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.8",
+    "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "yup": "^1.6.1"
   },
