--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~2.0.1",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "lottie-react-native": "7.1.0",
     "moment": "^2.30.1",
     "react": "18.3.1",
