--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-image-picker": "~16.0.6",
     "expo-location": "~18.0.10",
     "expo-permissions": "^14.4.0",
+    "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
