--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-location": "~18.0.10",
     "expo-permissions": "^14.4.0",
     "expo-secure-store": "~14.0.1",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
