--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-constants": "^17.0.8",
     "expo-image-picker": "~16.0.6",
     "expo-location": "~18.0.10",
+    "expo-notifications": "~0.29.14",
     "expo-permissions": "^14.4.0",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.24",
