--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
     "apisauce": "^3.1.1",
+    "dayjs": "^1.11.13",
     "expo": "~52.0.42",
     "expo-blur": "~14.0.3",
     "expo-constants": "^17.0.8",
@@ -33,7 +34,6 @@
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "lottie-react-native": "7.1.0",
-    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.8",
